[gd_scene load_steps=6 format=3 uid="uid://c5e23mmpnagn"]

[ext_resource type="Script" path="res://prefabs/itemConveyor/item_conveyor.gd" id="1_cgf3e"]
[ext_resource type="PackedScene" uid="uid://n5simytednjc" path="res://prefabs/dragableObject/variations/book.tscn" id="2_envns"]
[ext_resource type="ArrayMesh" uid="uid://bfo0onyyyey7b" path="res://models/conveyor/conveyorMesh.res" id="3_k1kyd"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_toqgl"]
friction = 0.1

[sub_resource type="BoxShape3D" id="BoxShape3D_klcp5"]
size = Vector3(30.9998, 0.749802, 3.05176)

[node name="ItemConveyor" type="Node3D"]
script = ExtResource("1_cgf3e")
items = Array[PackedScene]([ExtResource("2_envns")])
itemSpacing = 0.1
conveyorSpeed = 5.0

[node name="SpawnPoint" type="Node3D" parent="."]
transform = Transform3D(2.1, 0, 0, 0, 2.1, 0, 0, 0, 2.1, -13.1449, 3.13309, 0)

[node name="ItemHolder" type="Node3D" parent="."]

[node name="RigidBody3D" type="RigidBody3D" parent="."]
physics_material_override = SubResource("PhysicsMaterial_toqgl")
gravity_scale = 0.0
lock_rotation = true
freeze = true

[node name="Belt" type="MeshInstance3D" parent="RigidBody3D"]
transform = Transform3D(1.50996e-07, 0, -2, 0, 2, 0, 2, 0, 1.50996e-07, 0, 0, 0)
mesh = ExtResource("3_k1kyd")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 0.999997, 0, 0.375357, 0)
shape = SubResource("BoxShape3D_klcp5")
